--- a/app/views/shared/_progress.rhtml
+++ b/app/views/shared/_progress.rhtml
@@ -1,3 +1,3 @@
 <div class="progress-bg"></div>
 <div id="project_<%= project.id %>" class="progress" style="width:80%"></div>
-<div class="progress-text"><%= link_to(project.name, :controller => "project", :action => "show", :id => project.id) %></div>
+<div class="progress-text"><%= link_to(project.name, link) %></div>
