--- a/app/views/project/_dashboard.rhtml
+++ b/app/views/project/_dashboard.rhtml
@@ -8,7 +8,13 @@
   <% @projects.each do |project| %>
     <tr>
       <td>
-      <%= render :partial => "shared/progress", :locals => {:project => project} %>
+      <%
+      link = {:controller => "project", :action => "index"}
+      if(project.latest_revision)
+        link = {:controller => "revision", :action => "show", :id => project.latest_revision.id}
+      end
+      %>
+      <%= render :partial => "shared/progress", :locals => {:project => project, :link => link} %>
       </td>
     </tr>
   <% end %>
