--- a/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
+++ b/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
@@ -43,7 +43,7 @@
           :url => {:controller => "project", :action => "dashboard"}
         ) %>
         <div id="dashboard">
-          <%= render :partial => "dashboard" %>
+          <%= render "project/dashboard" %>
         </div>
       </td>
     </tr>
