Fixed * that we * can use wiki * in commits * as described in DC-431 (use RedCloth)

--- a/app/views/revision/show.rhtml
+++ b/app/views/revision/show.rhtml
@@ -14,7 +14,7 @@
       <div class="revision-message">
         <b><%= @revision.developer %></b>
         (<%= @revision.timepoint %>)<br/>
-        @project.tracker.highlight(@revision.message)
+        <%= textilize(@revision.message) %>
       </div>
     </td>
   </tr>
