--- a/app/views/project/dashboard.rhtml
+++ b/app/views/project/dashboard.rhtml
@@ -14,7 +14,7 @@
         link = {:controller => "revision", :action => "show", :id => project.latest_revision.id}
       end
       %>
-      <%= render :partial => "summary", :locals => {:project => project, :link => link} %>
+      <%= render :partial => "project/summary", :locals => {:project => project, :link => link} %>
       </td>
     </tr>
   <% end %>
