--- a/branches/damagecontrol_active_record/app/views/revision/show.rhtml
+++ b/branches/damagecontrol_active_record/app/views/revision/show.rhtml
@@ -14,7 +14,7 @@
       <div class="revision-message">
         <b><%= @revision.developer %></b>
         (<%= @revision.timepoint %>)<br/>
-        @project.tracker.highlight(@revision.message)
+        <%= textilize(@revision.message) %>
       </div>
     </td>
   </tr>
