--- a/branches/damagecontrol_active_record/app/views/project/edit.rhtml
+++ b/branches/damagecontrol_active_record/app/views/project/edit.rhtml
@@ -1,20 +1,22 @@
 <script type="text/javascript">
-toplevelTabIds = ["project", "scms", "publishers", "trackers"];
+toplevelTabIds = ["project", "scms", "publishers", "trackers", "scm_webs"];
 </script>
 
-<table cellpadding="0" cellspacing="0">
+<table>
   <tr>
     <td><%= tab_link("General", "wrench", "project", "toplevelTabIds") %></td>
     <td><%= tab_link("Source Control", "safe", "scms", "toplevelTabIds") %></td>
     <td><%= tab_link("Publishers", "megaphone", "publishers", "toplevelTabIds") %></td>
     <td><%= tab_link("Issue Tracking", "bug_green", "trackers", "toplevelTabIds") %></td>
+    <td><%= tab_link("SCM Browsing", "safe", "scm_webs", "toplevelTabIds") %></td>
   </tr>
 </table>
 
 <%= form_tag(:controller => "project", :action => @submit_action, :id => @project.id) %>
 <div id="project" style="display:block"><%= render_partial("project", @project) %></div>
 <div id="scms" style="display:none"><%= select_pane("scms", @project.scm) %></div>
-<div id="publishers" style="display:none">PUB</div>
-<div id="trackers" style="display:none">TRACK</div>
+<div id="publishers" style="display:none"><%= select_pane("publishers", nil) %></div>
+<div id="trackers" style="display:none"><%= select_pane("trackers", nil) %></div>
+<div id="scm_webs" style="display:none"><%= select_pane("scm_webs", nil) %></div>
 <%= submit_tag(@submit_text) %>
 </form>
