--- a/branches/damagecontrol_active_record/app/views/shared/_select_pane.rhtml
+++ b/branches/damagecontrol_active_record/app/views/shared/_select_pane.rhtml
@@ -8,14 +8,18 @@
   <tr>
     <td>
       <select name="<%= objects_name[0..-2] %>" onchange="showElement(this.value, <%= objects_name %>_array)">
-        <%= options_for_select(objects.collect{|o| [o.name, o.class.name]}, selected.class.name) %>
+        <%= options_for_select(objects.collect{|object| [object.name, object.class.name]}, selected.class.name) %>
       </select>
     </td>
   </tr>
 </table>
 
-<% objects.each do |o| %>
-  <div id="<%= o.class.name %>" style="<% if(o.class == selected.class)%>display:block<%else%>display:none<%end%>">
-    <%= render_object_with_name(o, "#{objects_name}[#{o.class.name}]") %>
+<% objects.each do |object| %>
+  <div id="<%= object.class.name %>" style="<% if(object.class == selected.class)%>display:block<%else%>display:none<%end%>">
+    <% if(has_template(objects_name, object)) %>
+      <%= render :partial => template_for(objects_name, object), :locals => {:object => object} %>
+    <% else %>
+      <%= render_object_with_name(object, "#{objects_name}[#{object.class.name}]") %>
+    <% end %>
   </div>
 <% end %>
