--- a/app/views/project/settings.rhtml
+++ b/app/views/project/settings.rhtml
@@ -6,16 +6,19 @@ var settings = new Settings("root");
 <%= form_tag(:controller => "project", :action => @submit_action, :id => @project.id) %>
 <div id="settings">
   <%= render :partial => "shared/menu", :locals => {:rows => @rows} %>
-  <% @rows.each do |row| %>
-    <% row.each do |object| %>
+  <% @rows.flatten.each do |object| %>
       <div id="<%= object.class.name %>" style="display:none;">
-        <% if(has_template(object.family, object)) %>
-          <%= render :partial => template_for(object.family, object), :locals => {:object => object} %>
-        <% else %>
-          <%= render_object_with_name(object, "#{object.family}[#{object.class.name}]") %>
-        <% end %>
+        <div>
+          <%= image_tag(object.icon, :size=>"48x48", :border=>0) %> <%= object.name %>
+        </div>
+        <div>
+          <% if(has_template(object.family, object)) %>
+            <%= render :partial => template_for(object.family, object), :locals => {:object => object} %>
+          <% else %>
+            <%= render_object_with_name(object, "#{object.family}[#{object.class.name}]") %>
+          <% end %>
+        </div>
       </div>
-    <% end %>
   <% end %>
 </div>
 <%= submit_tag(@submit_text) %>
