--- a/branches/damagecontrol_active_record/app/views/shared/_menu.rhtml
+++ b/branches/damagecontrol_active_record/app/views/shared/_menu.rhtml
@@ -1,4 +1,4 @@
-<div id="root" style="display:block">
+<div class="setting" id="root" style="display:block">
   <table>
     <%
       max_row_length = rows.collect{|row| row.length}.max 
