better ui integration for plugins

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -5,17 +5,10 @@
   <title>DamageControl</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="Content-Language" content="en-us"/>
-	<%= stylesheet_link_tag("/javascripts/jscalendar/calendar-win2k-2", "style.css", "diff.css") %>
+	<%= stylesheet_link_tag("style.css", "diff.css") %>
   <%= javascript_include_tag(
     "prototype",
-#    "control",
-#    "dragdrop",
     "effects",
-#    "rico"
-#		"/javascripts/jscalendar/calendar",
-#		"/javascripts/jscalendar/calendar-setup.js",		
-#		"/javascripts/jscalendar/lang/calendar-en.js",
-#		"dateformat",
 		"damagecontrol"
 	) %>
 </head>
