--- a/app/views/project/settings.rhtml
+++ b/app/views/project/settings.rhtml
@@ -4,16 +4,17 @@ var settings = new Settings("root");
 <%= link_to_function(image_tag("wrench"), "settings.show('root')") %>
 
 <%= form_tag(:controller => "project", :action => @submit_action, :id => @project.id) %>
-<div id="settings">
+<div>
   <%= render :partial => "shared/menu", :locals => {:rows => @rows} %>
   <% @rows.flatten.each do |object| %>
-      <div id="<%= object.class.name %>" style="display:none;">
+      <div class="setting" id="<%= object.class.name %>" style="display:none;">
         <div>
           <%= image_tag(object.icon, :size=>"48x48", :border=>0) %> <%= object.name %>
         </div>
         <div>
-          <% if(has_template(object.family, object)) %>
-            <%= render :partial => template_for(object.family, object), :locals => {:object => object} %>
+          <%= render :partial => template_for(object.family, object.family), :locals => {:object => object} %>
+          <% if(has_template(object.family, object.class.name.demodulize.underscore)) %>
+            <%= render :partial => template_for(object.family, object.class.name.demodulize.underscore), :locals => {:object => object} %>
           <% else %>
             <%= render_object_with_name(object, "#{object.family}[#{object.class.name}]") %>
           <% end %>
