--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,9 @@
-#prefs div {
-  border-color:#FF0000;
-  border-width:1;
-  border-style:solid;
+/* absolute positioning is the easiest way to achieve smooth fade/appear */
+.setting {
   position:absolute;
-  top:100px;
-  left:200px;
-  height:400px;
-  width:400px;
+  top:140px;
+  left:280px;
+  height:500px;
 }
 
 .progress-bg {
