--- a/app/views/shared/_object.rhtml
+++ b/app/views/shared/_object.rhtml
@@ -1,8 +1,8 @@
 <table>
   <% object.to_yaml_properties.each do |attr_name| %>
-  <tr>
-    <td><%= description(object.class, attr_name) %></td>
-    <td><%= field(object, object_name, attr_name) %></td>
-  </tr>
+    <tr>
+      <td><%= description(object.class, attr_name) %></td>
+      <td><%= field(object, prefix, attr_name) %></td>
+    </tr>
   <% end %>
 </table>
