--- a/app/views/scm/_cvs.rhtml
+++ b/app/views/scm/_cvs.rhtml
@@ -122,7 +122,7 @@ var cvs_mod_tip  = "<div class='tp1'>Note that you can't use trigged build if yo
     <td>Protocol</td>
     <td>&nbsp;</td>
     <td>
-      <select onchange="updateCvsRootField()">
+      <select onchange="updateCvsRootField()" id="cvsprotocol">
         <option value=""></option>
         <option value="ext" selected="selected">Secure shell (:ext:)</option>
         <option value="pserver">Password server (:pserver:)</option>
