--- a/app/views/scm/_scm.rhtml
+++ b/app/views/scm/_scm.rhtml
@@ -3,8 +3,8 @@
     <tr>
       <td>Change detection</td>
       <td>
-        Polling: <%= radio_button_tag("scm[#{object.class.name}][change_detection]", "POLLING", true) %>
-        Trigger: <%= radio_button_tag("scm[#{object.class.name}][change_detection]", "TRIGGER", false) %>
+        Polling: <%= radio_button_tag("scm[#{object.class.name}][change_detection]", "POLLING", true, {:id=>nil}) %>
+        Trigger: <%= radio_button_tag("scm[#{object.class.name}][change_detection]", "TRIGGER", false, {:id=>nil}) %>
       </td>
     </tr>
   </table>
