* Improved test_project * Improved artifact_archiver * Improved filesystem_controller (file browsing) * Added some icons for file browsing * Removed experimental code for virtual file system * Added sparklines

--- a/app/views/file_system/dir.rhtml
+++ b/app/views/file_system/dir.rhtml
@@ -1,5 +1,12 @@
 <div class="file_system">
-<% @dir.files.each do |file| %>
-  <div><a href="/artifacts/<%= file.path.join('/') %>"></a></div>
+<% @dir.children.each do |child| %>
+  <div>
+    <%= link_to(
+      image_tag(child.icon, :size => "16x16", :border => 0) + child.basename, 
+      :controller => "file_system", 
+      :action => "artifacts", 
+      :params => {:path => @path_array.dup << child.basename}
+    ) %>
+  </div>
 <% end %>
 </div>
