--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -21,7 +21,7 @@
     <tr>
       <td width="20%">
         <% if(@template_for_left_column) %>
-          render(@template_for_left_column)
+          <%= render(@template_for_left_column) %>
         <% else %>
         TODO: assign @template_for_left_column to have it rendered here!
         <% end %>
