--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -14,7 +14,11 @@
 </head>
 <body>
   <p>
-  <%= link_to "New Project", :controller => "project", :action => "new" %>
+  <%= link_to "New Project", :controller => "project", :action => "new" %> |
+  <%= link_to "Artifacts", :controller => "file_system", :action => "artifacts" %>
+  <% if(@project) %>
+    <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
+  <% end %>
   </p>
 
   <table width="100%">
